--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "lenis": "^1.3.8",
+    "motion": "^12.23.12",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
