--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "i18n": "^0.15.1",
+    "i18next": "^25.3.6",
+    "i18next-resources-to-backend": "^1.2.1",
     "lenis": "^1.3.8",
     "motion": "^12.23.12",
     "next": "15.4.1",
+    "next-i18n-router": "^5.5.3",
+    "next-intl": "^4.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^15.6.1",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
